# fetchcode

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  README.rst  azure-pipelines.yml  configure  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: docs-ci.yml  pypi-release.yml  run-unit-tests.yml
docs/source/: conf.py
etc/scripts/: check_thirdparty.py  fetch_thirdparty.py  utils_dejacode.py  utils_requirements.py  utils_thirdparty.py
fetchcode/: api.py  commoncode_datautils.py  giturl.py  package.py
fetchcode/purl2url/: __init__.py
fetchcode/vcs/: __init__.py
fetchcode/vcs/pip/_internal/: __init__.py  cache.py  configuration.py  self_outdated_check.py
fetchcode/vcs/pip/_vendor/: retrying.py
package_registry/: github_tags.py  rust_versions.py
purl2url/: rust.py
src/fetchcode/: __init__.py  commoncode_datautils.py  composer.py  cpan.py  cran.py  download_urls.py  huggingface.py  ipkg_release_info.py  package.py  package_managers.py  package_util.py  package_versions.py  packagedcode_models.py  pypi.py  utils.py
src/fetchcode/data/: ipkg_releases.json  udhcp_releases.json
src/fetchcode/vcs/: __init__.py  git.py  pip.ABOUT
src/fetchcode/vcs/pip/: __init__.py  __main__.py
tests/: conftest.py  test_api.py  test_composer.py  test_cpan.py  test_cran.py  test_download_urls.py  test_fetch.py  test_github_tags.py  test_giturl.py  test_huggingface.py  test_package.py  test_package_managers.py  test_package_versions.py  test_purl2url.py  test_pypi.py  test_rust_versions.py  test_vcs.py  test_vcs_git.py  test_vcs_pip.py  test_vcs_pip_bazaar.py  test_vcs_pip_git.py  test_vcs_pip_mercurial.py  test_vcs_pip_mercurial_unit.py  test_vcs_pip_subversion.py
tests/data/: bitbucket.json  bitbucket_mock_data.json  bitbucket_mock_release_data.json  cargo.json  cargo_mock_data.json  gh_tags_response.json  github.json  github_mock_data.json  homebrew.json  homebrew1.json  homebrew2.json  homebrew_mock_data.json  homebrew_mock_data1.json  homebrew_mock_data2.json  npm.json  npm_mock_data.json  pypi.json  pypi_mock_data.json  rubygems.json  rubygems_mock_data.json  rubygems_mock_data_versions.json  rubygems_mock_get_1st_in_list.json  rubygems_mock_get_2nd_in_list.json  rubygems_mock_get_3rd_in_list.json  rubygems_mock_get_list_of_versions.json  rust_versions_response.json
tests/data/cocoapods/: AFNetworking.html  afnetworking_github_rest_no_exception_response.json  afnetworking_github_rest_response.json  afnetworking_response_text.txt  cocoapod_all_pods_versions_5_1_f.txt  expected_construct_cocoapods_package.json  expected_result_to_dict.json  get_json_response_kvllibraries.json  mock_get_github_rest_return_value.json  mock_get_response_side_effect.json  pod_summary_kvllibraries.json
tests/data/debian_test_data/: debian-binary-expected-data.json  debian-source-expected-data.json  leatherman_1.12.1+dfsg-1.2.debian.tar.xz  leatherman_1.4.0+dfsg-1_bpo9+1.debian.tar.xz  libghc-curl-prof_1.3.8-11+b3_armel_mock_data.deb
tests/data/dirlisting/: regenerate_mock_data.py
tests/data/dirlisting/generic/: busybox-expected.json  bzip2-expected.json  dnsmasq-expected.json  (+14 more)
tests/data/package_managers/: composer_mock_data.json  conan.json  deb.json  deb_mock_data.json  gem_mock_data.json  github.json  hex_mock_data.json  maven_mock_data.xml  npm.json  pypi_mock_data.json
tests/data/package_versions/: cargo.json  cargo_mock_data.json  composer.json  composer_mock_data.json  conan.json  conan_mock_data.json  conan_mock_data.yml  deb_mock_data.json  gem.json  gem_mock_data.json  github.json  github_mock_data.json  golang.json  hex.json  hex_mock_data.json  launchpad.json  launchpad_mock_data.json  maven.json  npm.json  npm_mock_data.json  nuget.json  nuget_mock_data.json  pypi.json  pypi_mock_data.json  regenerate_mock_data.py
tests/data/pypi/: asgiref-3.11.0.json  asgiref.json
tests/lib/: __init__.py  compat.py  git_submodule_helpers.py  local_repos.py  path.py
tests/purl2url/: test_rust.py
(+624 files in other folders)
