[wheel]
universal=1

[metadata]
license_file = apache-2.0.LICENSE
name = fetchcode
author = nexB. Inc. and others
author_email = info@aboutcode.org
description = fetchcode is a library to reliably fetch code via HTTP, FTP and version control systems.
long_description = file:README.rst
url = https://github.com/nexB/fetchcode
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Utilities
keywords = 

[options]
package_dir=
    =src
packages=find:
include_package_data = true
zip_safe = false

python_requires = >=3.6.*, <4

install_requires =
    attrs
    packageurl-python
    requests
setup_requires = setuptools_scm[toml] >= 4

[options.packages.find]
where=src

[options.extras_require]
testing =
    # upstream
    pytest
    pytest-xdist
full =
    fetchcode
