[metadata]
license_file = apache-2.0.LICENSE
name = fetchcode
author = nexB. Inc. and others
author_email = info@aboutcode.org
description = fetchcode is a library to reliably fetch code via HTTP, FTP and version control systems.
long_description = file:README.rst
url = https://github.com/nexB/fetchcode
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
keywords =

[options]
package_dir=
    =src
packages=find:
include_package_data = true
zip_safe = false
install_requires =
    attrs
    packageurl-python
    requests
    six
    tenacity
setup_requires = setuptools_scm[toml] >= 4

[options.packages.find]
where=src

[options.extras_require]
testing =
    # upstream
    pytest
    pytest-xdist
docs =
    Sphinx>=3.3.1
    sphinx-rtd-theme>=0.5.0
    doc8>=0.8.1
