[metadata]
name = fetchcode
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = fetchcode is a library to reliably fetch code via HTTP, FTP and version control systems.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/aboutcode-org/fetchcode

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Software Development
    Topic :: Utilities

keywords =
    utilities
    package manager
    dependencies
    fetch
    scancode
    download
    downloader

license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    CODE_OF_CONDUCT.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

setup_requires = setuptools_scm[toml] >= 4

python_requires = >=3.10

install_requires =
    attrs
    commoncode
    htmllistparse
    packageurl-python
    requests
    python-dateutil
    python-dotenv


[options.packages.find]
where = src


[options.extras_require]
testing =
    pytest >= 8.0.0
    pytest-xdist >= 2
    aboutcode-toolkit >= 7.0.2
    pycodestyle >= 2.8.0
    twine
    black
    isort

docs =
    Sphinx>=5.0.2
    sphinx-rtd-theme>=1.0.0
    sphinx-reredirects >= 0.1.2
    doc8>=0.11.2
    sphinx-autobuild
    sphinx-rtd-dark-mode>=1.3.0
    sphinx-copybutton

[pycodestyle]
max-line-length = 88
ignore = E203,E701
